// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentLoad when current load is in caution mode matches snapshot 1`] = `
<div
  className="current-load-container current-load-container-caution"
>
  <div
    className="current-load-text"
  >
    The current load is 71.20%
  </div>
  <VictoryPie
    animate={
      Object {
        "duration": 2000,
      }
    }
    colorScale={
      Array [
        "#bf7814",
        "#252525",
      ]
    }
    containerComponent={
      <VictoryContainer
        className="VictoryContainer"
        portalComponent={<Portal />}
        portalZIndex={99}
        responsive={true}
      />
    }
    data={
      Array [
        Object {
          "x": "Load Average",
          "y": 71.2,
        },
        Object {
          "x": "Available CPU",
          "y": 28.799999999999997,
        },
      ]
    }
    dataComponent={
      <Slice
        pathComponent={<Path />}
        role="presentation"
        shapeRendering="auto"
      />
    }
    groupComponent={<g />}
    innerRadius={90}
    labelComponent={<div />}
    sortOrder="ascending"
    standalone={true}
    theme={
      Object {
        "area": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "axis": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "axis": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 1,
            },
            "axisLabel": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 25,
              "stroke": "transparent",
              "textAnchor": "middle",
            },
            "grid": Object {
              "fill": "none",
              "pointerEvents": "painted",
              "stroke": "none",
            },
            "tickLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "ticks": Object {
              "fill": "transparent",
              "size": 1,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "bar": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "padding": 8,
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "boxplot": Object {
          "boxWidth": 20,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "max": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "maxLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "median": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "medianLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "min": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "minLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q1": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q1Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q3": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q3Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "candlestick": Object {
          "candleColors": Object {
            "negative": "#252525",
            "positive": "#ffffff",
          },
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "chart": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "errorbar": Object {
          "borderWidth": 8,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "group": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "histogram": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#969696",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "legend": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "gutter": 10,
          "orientation": "vertical",
          "style": Object {
            "data": Object {
              "type": "circle",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "title": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "titleOrientation": "top",
        },
        "line": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "pie": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 400,
          "padding": 50,
          "style": Object {
            "data": Object {
              "padding": 10,
              "stroke": "transparent",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 20,
              "stroke": "transparent",
            },
          },
          "width": 400,
        },
        "scatter": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "stack": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "tooltip": Object {
          "cornerRadius": 5,
          "flyoutPadding": 5,
          "flyoutStyle": Object {
            "fill": "#f0f0f0",
            "pointerEvents": "none",
            "stroke": "#252525",
            "strokeWidth": 1,
          },
          "pointerLength": 10,
          "style": Object {
            "fill": "#252525",
            "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 0,
            "pointerEvents": "none",
            "stroke": "transparent",
          },
        },
        "voronoi": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "flyout": Object {
              "fill": "#f0f0f0",
              "pointerEvents": "none",
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "pointerEvents": "none",
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
      }
    }
  />
</div>
`;

exports[`CurrentLoad when current load is in danger mode matches snapshot 1`] = `
<div
  className="current-load-container current-load-container-danger"
>
  <div
    className="current-load-text"
  >
    The current load is 98.10%
  </div>
  <VictoryPie
    animate={
      Object {
        "duration": 2000,
      }
    }
    colorScale={
      Array [
        "#b92511",
        "#252525",
      ]
    }
    containerComponent={
      <VictoryContainer
        className="VictoryContainer"
        portalComponent={<Portal />}
        portalZIndex={99}
        responsive={true}
      />
    }
    data={
      Array [
        Object {
          "x": "Load Average",
          "y": 98.1,
        },
        Object {
          "x": "Available CPU",
          "y": 1.9000000000000057,
        },
      ]
    }
    dataComponent={
      <Slice
        pathComponent={<Path />}
        role="presentation"
        shapeRendering="auto"
      />
    }
    groupComponent={<g />}
    innerRadius={90}
    labelComponent={<div />}
    sortOrder="ascending"
    standalone={true}
    theme={
      Object {
        "area": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "axis": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "axis": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 1,
            },
            "axisLabel": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 25,
              "stroke": "transparent",
              "textAnchor": "middle",
            },
            "grid": Object {
              "fill": "none",
              "pointerEvents": "painted",
              "stroke": "none",
            },
            "tickLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "ticks": Object {
              "fill": "transparent",
              "size": 1,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "bar": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "padding": 8,
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "boxplot": Object {
          "boxWidth": 20,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "max": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "maxLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "median": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "medianLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "min": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "minLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q1": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q1Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q3": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q3Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "candlestick": Object {
          "candleColors": Object {
            "negative": "#252525",
            "positive": "#ffffff",
          },
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "chart": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "errorbar": Object {
          "borderWidth": 8,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "group": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "histogram": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#969696",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "legend": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "gutter": 10,
          "orientation": "vertical",
          "style": Object {
            "data": Object {
              "type": "circle",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "title": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "titleOrientation": "top",
        },
        "line": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "pie": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 400,
          "padding": 50,
          "style": Object {
            "data": Object {
              "padding": 10,
              "stroke": "transparent",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 20,
              "stroke": "transparent",
            },
          },
          "width": 400,
        },
        "scatter": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "stack": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "tooltip": Object {
          "cornerRadius": 5,
          "flyoutPadding": 5,
          "flyoutStyle": Object {
            "fill": "#f0f0f0",
            "pointerEvents": "none",
            "stroke": "#252525",
            "strokeWidth": 1,
          },
          "pointerLength": 10,
          "style": Object {
            "fill": "#252525",
            "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 0,
            "pointerEvents": "none",
            "stroke": "transparent",
          },
        },
        "voronoi": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "flyout": Object {
              "fill": "#f0f0f0",
              "pointerEvents": "none",
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "pointerEvents": "none",
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
      }
    }
  />
</div>
`;

exports[`CurrentLoad when current load is normal matches snapshot 1`] = `
<div
  className="current-load-container"
>
  <div
    className="current-load-text"
  >
    The current load is 23.40%
  </div>
  <VictoryPie
    animate={
      Object {
        "duration": 2000,
      }
    }
    colorScale={
      Array [
        "#14751a",
        "#252525",
      ]
    }
    containerComponent={
      <VictoryContainer
        className="VictoryContainer"
        portalComponent={<Portal />}
        portalZIndex={99}
        responsive={true}
      />
    }
    data={
      Array [
        Object {
          "x": "Load Average",
          "y": 23.4,
        },
        Object {
          "x": "Available CPU",
          "y": 76.6,
        },
      ]
    }
    dataComponent={
      <Slice
        pathComponent={<Path />}
        role="presentation"
        shapeRendering="auto"
      />
    }
    groupComponent={<g />}
    innerRadius={90}
    labelComponent={<div />}
    sortOrder="ascending"
    standalone={true}
    theme={
      Object {
        "area": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "axis": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "axis": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 1,
            },
            "axisLabel": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 25,
              "stroke": "transparent",
              "textAnchor": "middle",
            },
            "grid": Object {
              "fill": "none",
              "pointerEvents": "painted",
              "stroke": "none",
            },
            "tickLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "ticks": Object {
              "fill": "transparent",
              "size": 1,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "bar": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "padding": 8,
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "boxplot": Object {
          "boxWidth": 20,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "max": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "maxLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "median": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "medianLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "min": Object {
              "padding": 8,
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "minLabels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q1": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q1Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
            "q3": Object {
              "fill": "#969696",
              "padding": 8,
            },
            "q3Labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 3,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "candlestick": Object {
          "candleColors": Object {
            "negative": "#252525",
            "positive": "#ffffff",
          },
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "chart": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "errorbar": Object {
          "borderWidth": 8,
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "group": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "histogram": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#969696",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "legend": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "gutter": 10,
          "orientation": "vertical",
          "style": Object {
            "data": Object {
              "type": "circle",
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
            "title": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "stroke": "transparent",
            },
          },
          "titleOrientation": "top",
        },
        "line": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "#252525",
              "strokeWidth": 2,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "pie": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 400,
          "padding": 50,
          "style": Object {
            "data": Object {
              "padding": 10,
              "stroke": "transparent",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 20,
              "stroke": "transparent",
            },
          },
          "width": 400,
        },
        "scatter": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "#252525",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 10,
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
        "stack": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "width": 450,
        },
        "tooltip": Object {
          "cornerRadius": 5,
          "flyoutPadding": 5,
          "flyoutStyle": Object {
            "fill": "#f0f0f0",
            "pointerEvents": "none",
            "stroke": "#252525",
            "strokeWidth": 1,
          },
          "pointerLength": 10,
          "style": Object {
            "fill": "#252525",
            "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
            "fontSize": 14,
            "letterSpacing": "normal",
            "padding": 0,
            "pointerEvents": "none",
            "stroke": "transparent",
          },
        },
        "voronoi": Object {
          "colorScale": Array [
            "#252525",
            "#525252",
            "#737373",
            "#969696",
            "#bdbdbd",
            "#d9d9d9",
            "#f0f0f0",
          ],
          "height": 300,
          "padding": 50,
          "style": Object {
            "data": Object {
              "fill": "transparent",
              "stroke": "transparent",
              "strokeWidth": 0,
            },
            "flyout": Object {
              "fill": "#f0f0f0",
              "pointerEvents": "none",
              "stroke": "#252525",
              "strokeWidth": 1,
            },
            "labels": Object {
              "fill": "#252525",
              "fontFamily": "'Gill Sans', 'Seravek', 'Trebuchet MS', sans-serif",
              "fontSize": 14,
              "letterSpacing": "normal",
              "padding": 5,
              "pointerEvents": "none",
              "stroke": "transparent",
            },
          },
          "width": 450,
        },
      }
    }
  />
</div>
`;

exports[`CurrentLoad when data is loading matches snapshot 1`] = `
<div
  className="current-load-container"
>
  <div
    className="current-load-text"
  >
    The current load is loading
  </div>
  0
</div>
`;
